--- a/process.html
+++ b/process.html
@@ -273,5 +273,7 @@ My deliverables from the research stage include a document detailing my findings
     <script src="js/bootstrap.min.js"></script>
     <script src="http://maps.googleapis.com/maps/api/js?sensor=false&extension=.js&output=embed"></script>
     <script src="js/scripts.js"></script>
+    <!-- Funn -->
+    <script type="text/javscript" src="script.js"></script>
   </body>
 </html>
